# Mobius-Substrate

./: .cursorrules  .eslintrc.json  .gitignore  .gitleaks.toml  .npmrc  ADD_LABEL_INSTRUCTIONS.md  ARCHITECTURE.md  BUNDLE_OPTIMIZATION.md  C-153-VISUAL-SUMMARY.md  C148_WORKFLOWS_INTEGRATION_SUMMARY.md  C156-LINKS-AND-ENDPOINTS-FIXED.md  CHANGELOG.md  CLAUDE.md  CNAME  CODEOWNERS  CONTRIBUTING.md  CREATE_PR.md  DOCS.md  DVA_RUNTIME.md  ECHO_LAYER_MERGE_COMPLETE.md  ECHO_LAYER_MERGE_SUMMARY.md  MIGRATION_C155.md  PERFORMANCE_ANALYSIS.md  PERFORMANCE_ANALYSIS_REPORT.md  PERFORMANCE_FIXES_TEST_RESULTS.md  PRE_COMMIT_CHECKLIST.md  PR_DESCRIPTION.md  PR_STATUS.md  QUALITY_REPORT.md  README.md  REPO_DIGEST.md  REPO_MAP_TREE.md  SECURITY.md  TESTING.md  add-label.sh  broken-links-report.txt  broken-links.json  cycle.json  env.example  index.html  (+12 more)
.badges/: agent-ci.json  cycle.json  (+2 more)
sentinels/echo/: .env.example  CODEX.md  README.md  __init__.py  echo_sync.py  manifest.json  pyproject.toml
sentinels/echo/echo_scout/: __init__.py  config.py  fetchers.py  ledger_client.py  oaa_client.py  pipeline.py  schemas.py  server.py
sentinels/echo/tests/: test_pipeline.py
services/gatekeeper/: Dockerfile  IMPLEMENTATION_SUMMARY.md  INTEGRATION.md  README.md  docker-compose.yml  pyproject.toml
services/gatekeeper/.github/workflows/: ci.yml
services/gatekeeper/src/: __init__.py  app.py  attestation.py  auth.py  consensus.py  detectors.py  gi_client.py  policies.py  sandbox.py  types.py
services/gatekeeper/tests/: test_auth.py  test_consensus.py  test_rbac.py  test_sandbox.py
(+1921 files in other folders)
