[project]
name = "gatekeeper"
version = "0.1.0"
description = "Security gatekeeper for agent tool calls in Kaizen OS"
requires-python = ">=3.11"
dependencies = [
    "fastapi==0.115.0",
    "uvicorn[standard]==0.30.6",
    "pydantic==2.9.2",
    "httpx==0.27.2",
    "pyjwt==2.9.0",
    "python-multipart==0.0.12",
    "cryptography==43.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest==8.0.0",
    "pytest-asyncio==0.23.0",
    "ruff==0.1.0",
    "bandit==1.7.5",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
